# genfoo

./: AUTHORS  CMakeLists.txt  Doxyfile  README.md  bootstrap.sh
Dorsal/: dorsal.cfg
Misc/: CMakeLists.txt  EmbedDoc.cpp  TestBallResample.cpp
Operators/: CMakeLists.txt
Operators/CPP/: 2DX.cpp  3DX.cpp  CMakeLists.txt  DuffingVanDerPol.cpp  Mutation.cpp  NorthSouthFlowOnCircle.cpp  NorthSouthFlowOnSphere.cpp  OrnUhl1D.cpp  OrnUhl2D.cpp  OrnUhl3D.cpp  RF1D.cpp  RF1DParams.hpp  RF2D.cpp  RF2DParams.hpp  RF3D.cpp  RF3DParams.hpp  RV2D.cpp  RV2DParams.hpp  Rf1D.cpp  Rf2D.cpp
Operators/CPP/PlasmaPhysics/: ColoumbCollisionsOnMaxwellian.hpp  Plasma.hpp
Operators/XML/: FastIonThermalizationModel.xml  HestonModel.xml  Orn2DModel.xml  RabbitEarsModel.xml  Stix1DModel.xml
Params/: Duffing2D.xml  FastIonThermalization.xml  Heston.xml  Mutation.xml  NorthSouthCircle.xml  Orn1D.xml  Orn2D.xml  Orn3D.xml  RF2D.xml  RF3D.xml  RabbitEars.xml  Rf1D.xml  Stix1D.xml
Src/: AdaptFEMFactory.cpp  AdaptFEMFactory_defunct.cpp  BallResample.cpp  CMakeLists.txt  DMCFactory.cpp  DatIO.cpp  DynamicLoader.cpp  FEMFactory.cpp  H5PartIO.cpp  JIT.cpp  MCFactory.cpp  Main.cpp  MonteCarlo.cpp  Params.cpp  ReflectedBoundaryCondition.cpp
Src/include/: AdaptFokkerPlanck1D.h  AdaptFokkerPlanck1D.ufl  AdaptFokkerPlanck2D.h  AdaptFokkerPlanck2D.ufl  AdaptFokkerPlanck3D.ufl  BallResample.hpp  BoundaryCondition.hpp  DatIO.hpp  DualFokkerPlanck1D.h  DualFokkerPlanck1D.ufl  DualFokkerPlanck2D.h  DualFokkerPlanck2D.ufl  DynamicLoader.hpp  FPEFluxForm1D.h  FPEFluxForm1D.ufl  FPEFluxForm2D.h  FPEFluxForm2D.ufl  FPEFluxForm3D.h  FPEFluxForm3D.ufl  Faure.hpp  FokkerPlanck1D.h  FokkerPlanck1D.ufl  FokkerPlanck2D.h  FokkerPlanck2D.ufl  FokkerPlanck3D.h  FokkerPlanck3D.ufl  H5PartIO.hpp  JIT.hpp  Kernel1D.h  Kernel1D.ufl  Kernel2D.h  Kernel2D.ufl  Kernel3D.h  Kernel3D.ufl  MonteCarlo.hpp  Operator.hpp  OperatorExpression.hpp  Params.hpp  Particle.hpp  ParticleCollector.hpp  (+4 more)
Src/xml/: CMakeLists.txt  operator.xsd  operator.xsl  outputSpec.xsd  parameter_schema.xsd  parameter_schema_dev.xsd
Src/xml/Examples/: XMLoperatorParam.xml  XMLoperatorParam_dev.xml  operator.xml  outputSpec.xml
cmake/Modules/: Finddl.cmake
